# server

./: .gitignore  ACES_COLOR_MANAGEMENT.md  BUILDING.md  BUILDING_WORKFLOW.md  CAMERA_TRACKING.md  CLUSTER_SYNC.md  DECKLINK_COMPOSITOR.md  HDR_GUIDE.md  KEYFRAMES_DEBUG.md  MIXER_SHAPE.md  VIRTUAL_PRODUCTION_FEATURES.md  VMX_MODULE_USAGE.md  VULKAN_OUTPUT.md  blur_commands_guide.md  build_cluster_out.txt  build_decklink_capture.bat  build_exe_out.txt  build_hdr.bat  build_hdr_out.txt  build_kf_out.txt  build_log_new.txt  build_log_proper.txt  build_ninja.bat  build_notchlc_out.txt  build_now.bat  build_out.txt  build_out_premix.txt  build_prores_only.bat  build_prores_tests.bat  build_replay_out.txt  build_run.bat  build_tracking.bat  check_all_displays.ps1  check_display10.ps1  check_ndjson.py  check_rates.ps1  clean_cmake.py  cmake_log.txt  color_convert_spv.h  enum_disp.cs  (+27 more)
src/: CMakeLists.txt
src/CMakeModules/: Bootstrap_Linux.cmake  Bootstrap_Mac.cmake  Bootstrap_Windows.cmake  CasparCG_Util.cmake
src/accelerator/: CMakeLists.txt  accelerator.cpp  accelerator.h
src/accelerator/ogl/image/: blur_build2.txt  image_kernel.cpp  image_kernel.h  image_mixer.cpp  image_mixer.h  image_shader.cpp  image_shader.h  previz.frag  previz.vert  previz_renderer.cpp  previz_renderer.h  previz_scene.h  shader.frag
src/accelerator/ogl/util/: context.cpp  context.h  device.cpp  device.h  shader.cpp  shader.h  texture.cpp  texture.h  transforms.cpp
src/accelerator/vulkan/image/: fragment_shader.frag  image_kernel.cpp  image_kernel.h  image_mixer.cpp  image_mixer.h  previz_texture_bridge.cpp  previz_texture_bridge.h
src/accelerator/vulkan/util/: barrier.h  buffer.cpp  command_context.cpp  command_context.h  completion_token.h  descriptor_pool.cpp  descriptor_pool.h  device.cpp  device.h  draw_params.h  gpu_frame_factory.h  gpu_producer.cpp  gpu_producer.h  handoff.cpp  handoff.h  matrix.h  pipeline.cpp  pipeline.h  platform_config.h  queue_manager.cpp  queue_manager.h  renderpass.cpp  renderpass.h  texture.cpp  texture.h  texture_wrapper.cpp  texture_wrapper.h  transfer.cpp  transfer.h  transforms.cpp  transforms.h  uniform_block.h  vulkan_queue.cpp  vulkan_queue.h
src/common/: CMakeLists.txt  array.h  except.h  log.h  memory.h
src/common/gl/: gl_check.cpp
src/common/vulkan/: gpu_luid.cpp  gpu_luid.h  icd_filter.cpp  icd_filter.h  platform_handles.h
src/core/: CMakeLists.txt  module_dependencies.h  video_channel.cpp  video_channel.h  video_format.cpp  video_format.h
src/core/consumer/: channel_info.h  frame_consumer.h  frame_consumer_registry.cpp  output.cpp  output.h
src/core/diagnostics/: osd_graph.cpp  osd_graph.h
src/core/frame/: blend_mask_loader.cpp  blend_mask_loader.h  frame.cpp  frame.h  frame_factory.h  frame_transform.cpp  frame_transform.h  geometry.cpp  geometry.h  mesh_loader.cpp  mesh_loader.h  pixel_format.h  write_frame.cpp  write_frame.h
src/core/mixer/: mixer.cpp  mixer.h
src/core/mixer/image/: image_mixer.h
src/core/producer/: frame_producer.h  frame_producer_registry.cpp  stage.cpp  stage.h
src/core/producer/route/: route_producer.cpp
src/modules/: CMakeLists.txt  cuda_gl_interop_lock.h  cuda_vk_texture.h
src/modules/artnet/: CMakeLists.txt  artnet.cpp
src/modules/artnet/consumer/: artnet_consumer.cpp  artnet_consumer.h
src/modules/artnet/producer/: dmx_producer.cpp  dmx_producer.h
src/modules/artnet/util/: fixture_calculation.cpp
src/modules/bluefish/producer/: bluefish_producer.cpp
src/modules/cluster/: CMakeLists.txt  cluster.cpp  cluster.h  cluster_config.cpp  cluster_config.h
src/modules/cluster/ptp/: ptp_clock.cpp  ptp_clock.h  ptp_messages.h
src/modules/cluster/relay/: command_relay.cpp  (+3 more)
src/modules/cuda_notchlc/: CMakeLists.txt  cuda_notchlc.cpp  cuda_notchlc.h
src/modules/cuda_prores/: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  OPERATION_GUIDE.md  cuda_prores.cpp  cuda_prores.h  timecode.h
src/modules/decklink/: CMakeLists.txt  decklink.h  decklink_api.h
src/modules/ffmpeg/: CMakeLists.txt
src/modules/gpu_test/: CMakeLists.txt  gpu_test.cpp  gpu_test.h
src/modules/hap/: CMakeLists.txt  hap.cpp  hap.h
src/modules/html/: CMakeLists.txt  html.cpp
src/modules/keyframes/: CMakeLists.txt  keyframe_commands.cpp  keyframe_data.cpp  keyframe_data.h  keyframe_fields.cpp  keyframe_fields.h  keyframe_json.cpp  keyframes.cpp
src/modules/ltc/: CMakeLists.txt  ltc.h  ltc_input.cpp  ltc_input.h  miniaudio_impl.c
src/modules/newtek/: StdAfx.h
src/modules/portaudio/: CMakeLists.txt  portaudio_module.cpp  portaudio_module.h
src/modules/replay/: CMakeLists.txt  replay.cpp  replay.h  replay_consumer.cpp  replay_consumer.h  replay_extended_index.h  replay_file_operations.cpp  replay_file_operations.h  replay_producer.cpp  replay_producer.h  replay_segmented_storage.cpp  replay_segmented_storage.h
src/modules/sacn/: CMakeLists.txt  sacn.cpp  sacn.h
src/modules/screen/: CMakeLists.txt  screen.cpp  screen.h
src/modules/spout/: CMakeLists.txt  spout.cpp  spout.h
src/modules/system_audio/: CMakeLists.txt  system_audio.cpp  system_audio.h  system_audio_enumerate.cpp
src/modules/tracking/: CMakeLists.txt  camera_data.h  lens_profile.cpp  lens_profile.h  receiver_manager.cpp  receiver_manager.h  tracker_binding.h  tracker_registry.cpp  tracker_registry.h  tracking.cpp  tracking.h  tracking_commands.cpp  tracking_commands.h
src/modules/vmx/: CMakeLists.txt  vmx.cpp  vmx.h  vmx_consumer.cpp  vmx_consumer.h  vmx_extended_index.h  vmx_file_operations.cpp  vmx_file_operations.h  vmx_producer.cpp  vmx_producer.h  vmx_segmented_storage.cpp  vmx_segmented_storage.h
src/modules/vulkan_output/: CMakeLists.txt  LINUX_TESTING.md  vulkan_output.cpp  vulkan_output.h
src/protocol/: CMakeLists.txt
src/protocol/amcp/: AMCPCommandsImpl.cpp  amcp_command_repository_wrapper.h
src/shell/: CMakeLists.txt  casparcg.config  included_modules.tmpl  macos_main_loop.mm  main.cpp  process_helper_mac.cc  server.cpp
src/shell/mac/: helper-Info.plist.in
src/tools/: CMakeLists.txt  bin2c.cpp
tests_standalone/: CMakeLists.txt
(+252 files in other folders)
