cmake_minimum_required (VERSION 3.28)
project("modules")

if (MSVC)
    add_subdirectory(vmx)
    message(STATUS "VMX module enabled")
endif()

add_subdirectory(image)
add_subdirectory(ffmpeg)
add_subdirectory(oal)
add_subdirectory(decklink)
add_subdirectory(cuda_prores)
add_subdirectory(cuda_notchlc)
add_subdirectory(screen)
add_subdirectory(newtek)
add_subdirectory(artnet)

if (ENABLE_HTML)
	add_subdirectory(html)
endif ()
add_subdirectory(ltc)
add_subdirectory(system_audio)

if (MSVC)
	add_subdirectory(flash)
    add_subdirectory(bluefish)
    add_subdirectory(spout)
endif()
