cmake_minimum_required (VERSION 3.28)
project("modules")

option(BUILD_CUDA_MODULES "Build NVIDIA GPU-accelerated modules (ProRes, NotchLC)" ON)
option(BUILD_REPLAY "Build Replay module (Windows only)" ON)

if (MSVC AND BUILD_REPLAY)
    add_subdirectory(replay)
    message(STATUS "Replay module enabled")
endif()

add_subdirectory(image)
add_subdirectory(ffmpeg)
add_subdirectory(oal)
add_subdirectory(decklink)

if (BUILD_CUDA_MODULES)
    add_subdirectory(cuda_prores)
    add_subdirectory(cuda_notchlc)
    message(STATUS "CUDA modules enabled (cuda_prores, cuda_notchlc)")
endif()

add_subdirectory(screen)
add_subdirectory(newtek)
add_subdirectory(artnet)
add_subdirectory(sacn)
message(STATUS "sACN module enabled")

if (ENABLE_HTML)
        add_subdirectory(html)
endif ()
add_subdirectory(ltc)
add_subdirectory(system_audio)

if (MSVC)
    add_subdirectory(flash)
    add_subdirectory(bluefish)
    if (BUILD_SPOUT)
        add_subdirectory(spout)
        message(STATUS "Spout module enabled")
    endif()
endif()

# Camera-tracking module (always built)
add_subdirectory(tracking)
message(STATUS "Tracking module enabled")
