cmake_minimum_required (VERSION 3.28)
project("modules")

option(BUILD_REPLAY "Build Replay module (Windows only)" ON)

if (MSVC AND BUILD_REPLAY)
    add_subdirectory(replay)
    message(STATUS "Replay module enabled")
endif()

add_subdirectory(image)
add_subdirectory(ffmpeg)
add_subdirectory(oal)
add_subdirectory(decklink)

if (BUILD_CUDA_MODULES)
    add_subdirectory(cuda_prores)
    message(STATUS "CUDA module enabled: cuda_prores")
    if (BUILD_CUDA_NOTCHLC)
        add_subdirectory(cuda_notchlc)
        message(STATUS "CUDA module enabled: cuda_notchlc")
    endif()
endif()

add_subdirectory(hap)
message(STATUS "HAP module enabled")

add_subdirectory(screen)
if(ENABLE_VULKAN)
    add_subdirectory(vulkan_output)
endif()
add_subdirectory(newtek)
add_subdirectory(artnet)
add_subdirectory(sacn)
message(STATUS "sACN module enabled")

if (ENABLE_HTML)
        add_subdirectory(html)
endif ()
add_subdirectory(portaudio)
add_subdirectory(ltc)
message(STATUS "PortAudio module enabled")

if (MSVC)
    add_subdirectory(flash)
    add_subdirectory(bluefish)

    # Spout: auto-enabled on Windows (FetchContent, no manual install needed)
    if(NOT DEFINED BUILD_SPOUT)
        set(BUILD_SPOUT ON CACHE BOOL "Build Spout texture-sharing module (Windows only)")
    endif()
    if (BUILD_SPOUT)
        add_subdirectory(spout)
        message(STATUS "Spout module enabled")
    endif()
endif()

# Camera-tracking module (always built)
add_subdirectory(tracking)
message(STATUS "Tracking module enabled")

# Keyframe animation module (always built)
add_subdirectory(keyframes)
message(STATUS "Keyframe module enabled")

# Cluster sync module (always built)
add_subdirectory(cluster)
message(STATUS "Cluster module enabled")
